<resources>
    <string name="app_name">Productos</string>
    <string name="Salir">Salir</string>
    <string name="Refresh">Actualizar</string>
    <string name="txtProductoNombre">Titulo</string>
    <string name="txtProductoDescrip">Descripcion</string>
    <string name="txtProductoPrecio">Precio</string>
    <string name="imgProducto">imgProducto</string>
    <string name="btnCompra">Comprar</string>
    <string name="btnAtras">Atras</string>
    <string name="edtEmail">Ingrese su e-mail</string>
    <string name="edtPw">Ingrese su Contraseña</string>
    <string name="swtRecordar">Recordarme</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="imgLogin">ImgLogin</string>
    <string name="swtEnvio">Ofrecer Envio</string>
    <string name="btnImagen">Cargar Imagen</string>
    <string name="btnPublicar">Publicar</string>
    <string name="btnCancelar">Cancelar</string>

</resources>