<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/Atras"
        android:enabled="true"
        android:icon="@drawable/abc_vector_test"
        android:title="@string/btnAtras"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/Refresh"
        android:enabled="true"
        android:icon="@android:drawable/stat_notify_sync"
        android:title="@string/Refresh"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/Salir"
        android:icon="@drawable/ic_dialog_close_dark"
        android:title="@string/Salir"
        android:visible="true"
        app:showAsAction="always" />

</menu>