<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="8dp"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/imgProducto"
        android:layout_width="123dp"
        android:layout_height="117dp"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/imgProducto"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtProductoNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="10dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:padding="5dp"
        android:text="@string/txtProductoNombre"
        android:textColor="@color/colorNombreProducto"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtProductoDescrip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgProducto"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtProductoDescrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="7"
        android:padding="5dp"
        android:scrollHorizontally="true"
        android:singleLine="false"
        android:text="@string/txtProductoDescrip"
        android:textColor="@color/colorDescripProducto"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgProducto"
        app:layout_constraintTop_toBottomOf="@+id/txtProductoNombre" />

    <TextView
        android:id="@+id/txtProductoPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txtProductoPrecio"
        android:textColor="@color/colorPrecioProducto"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProducto" />
</androidx.constraintlayout.widget.ConstraintLayout>